Finished work on adding and displaying the rest of the new idea items in business canvas