@@ -1,10 +1,9 @@
 package com.ubuniworks.webapp.controller;
 
-import org.apache.commons.lang.StringUtils;
-import com.ubuniworks.service.GenericManager;
 import com.ubuniworks.model.Customersegment;
-import com.ubuniworks.webapp.controller.BaseFormController;
-
+import com.ubuniworks.service.GenericManager;
+import com.ubuniworks.service.IdeaManager;
+import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Controller;
@@ -21,34 +20,45 @@ import java.util.Locale;
 @RequestMapping("/customersegmentform*")
 public class CustomersegmentFormController extends BaseFormController {
     private GenericManager<Customersegment, Integer> customersegmentManager = null;
+    private IdeaManager ideaManager = null;
 
     @Autowired
     public void setCustomersegmentManager(@Qualifier("customersegmentManager") GenericManager<Customersegment, Integer> customersegmentManager) {
         this.customersegmentManager = customersegmentManager;
     }
 
+    @Autowired
+    public void setIdeaManager(IdeaManager ideaManager) {
+        this.ideaManager = ideaManager;
+    }
+
+
     public CustomersegmentFormController() {
-        setCancelView("redirect:customersegments");
-        setSuccessView("redirect:customersegments");
+        setCancelView("redirect:ideas");
+        setSuccessView("redirect:ideas");
     }
 
     @ModelAttribute
     @RequestMapping(method = RequestMethod.GET)
     protected Customersegment showForm(HttpServletRequest request)
-    throws Exception {
+            throws Exception {
         String idcustomersegment = request.getParameter("idcustomersegment");
+        String ididea = request.getParameter("ididea");
 
+        Customersegment customersegment = new Customersegment();
         if (!StringUtils.isBlank(idcustomersegment)) {
-            return customersegmentManager.get(new Integer(idcustomersegment));
+            customersegment = customersegmentManager.get(new Integer(idcustomersegment));
+        } else if (!StringUtils.isBlank(ididea)) {
+            customersegment.setIdea(ideaManager.get(Integer.valueOf(ididea)));
         }
 
-        return new Customersegment();
+        return customersegment;
     }
 
     @RequestMapping(method = RequestMethod.POST)
     public String onSubmit(Customersegment customersegment, BindingResult errors, HttpServletRequest request,
                            HttpServletResponse response)
-    throws Exception {
+            throws Exception {
         if (request.getParameter("cancel") != null) {
             return getCancelView();
         }
@@ -71,13 +81,12 @@ public class CustomersegmentFormController extends BaseFormController {
             customersegmentManager.remove(customersegment.getIdcustomersegment());
             saveMessage(request, getText("customersegment.deleted", locale));
         } else {
-            customersegmentManager.save(customersegment);
+            customersegment = customersegmentManager.save(customersegment);
             String key = (isNew) ? "customersegment.added" : "customersegment.updated";
             saveMessage(request, getText(key, locale));
 
-            if (!isNew) {
-                success = "redirect:customersegmentform?idcustomersegment=" + customersegment.getIdcustomersegment();
-            }
+            success = "redirect:ideadisplay?ididea=" + customersegment.getIdea().getIdidea() + "#businesscanvas";
+
         }
 
         return success;
